--- a/simplewatch.html
+++ b/simplewatch.html
@@ -36,8 +36,8 @@
 
   const config = {
     credential: {
-      serviceId: '발급 받은 Service Id를 입력',
-      key: '발급 받은 Service Key를 입력'
+      serviceId: 'ea1f0a45-6d19-41f3-b5bc-3283154984e3',
+      key: '1e6ffaf3005caa991b55d76d333f95b23ffd64ebb2792d4d702b1be8bf89bfb4'
     },
     view: {
       remote: '#remoteVideo'
